5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1836_1276.log
== TEST (2019-06-25 11:29:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
print(total)
print(min(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:30:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
print(total)
print(max(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:31:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	if total[0]== max(total[0]):
		print(i)
	




print(max(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:31:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	if total[0]== max(total[0]):
		print(1)
	




print(max(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:32:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	if total[1]==max(total[i])
		print(1)
	




print(max(total))
-- ERROR:
File "XXXX", line 11
    if total[1]==max(total[i])
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:33:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
print(max(total[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:33:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
print(max(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if total[0] = max(total[i])
-- ERROR:
File "XXXX", line 12
    if total[0] = max(total[i])
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if total[0] = max(total[i]):
	print(i)
-- ERROR:
File "XXXX", line 12
    if total[0] = max(total[i]):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) = max(total[i]):
	print(i)
-- ERROR:
File "XXXX", line 12
    if sum(total[0]) = max(total[i]):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total[i]):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:38:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:38:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))


y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:38:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
if sum(total[2]) == max(total):
	print(i)
if sum(total[3]) == max(total):
	print(i)
if sum(total[4]) == max(total):
	print(i)
if sum(total[5]) == max(total):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:40:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
if sum(total[2]) == max(total):
	print(i)
if sum(total[3]) == max(total):
	print(i)
if sum(total[4]) == max(total):
	print(i)
if sum(total[5]) == max(total):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:40:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
if sum(total[2]) == max(total):
	print(i)
if sum(total[3]) == max(total):
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:41:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
if sum(total[2]) == max(total):
	print(i)
if sum(total[3]) == max(total):
	print(i)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:41:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
if sum(total[2]) == max(total):
	print(i)
if sum(total[3]) == max(total):
	print(i)
print(total)
-- EXECUTION TIME:
1.16093
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[28 21 42 16 47 41 21]
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
8
[39 42 39 58 19 27 40 41 41]
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
[45 30 28 37 26 40 40 47]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:41:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
if sum(total[2]) == max(total):
	print(i)
if sum(total[3]) == max(total):
	print(i)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:42:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
	
if sum(total[0]) == max(total):
	print(i)
if sum(total[1]) == max(total):
	print(i)
if sum(total[2]) == max(total):
	print(i)
if sum(total[3]) == max(total):
	print(i)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:44:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[i] = sum(n[:,j])
	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:44:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:44:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- EXECUTION TIME:
1.26969
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:

-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:47:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0].T
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:47:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0].T
total = zeros(y,dtype=int)
print(y)
for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:49:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)
print(y)
for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:49:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- EXECUTION TIME:
1.05621
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[30 30 30 27 29 32 38]
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:49:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:50:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:51:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == min(total):
	print(j)
if sum(total[1]) == min(total):
	print(j)
if sum(total[2]) == min(total):
	print(j)
if sum(total[3]) == min(total):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:51:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if sum(total[3]) == max(total):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:52:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if (sum(total[3]) == max(total)):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:52:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if (sum(total[3]) == max(total)):
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:52:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(i)
if (sum(total[3]) == max(total)):
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:54:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if (sum(total[3]) == max(total)):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:19:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if (sum(total[3]) == max(total)):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:24:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
if sum(total[0]) == max(total):
	print(j)
if sum(total[1]) == max(total):
	print(j)
if sum(total[2]) == max(total):
	print(j)
if (sum(total[3]) == max(total)):
	print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:30:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = sum(n[:,j])
print(total)	
for j in range(total):
	j = j +1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:31:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(y):
	total[j] = total[j] + 1
	
print(total)	
for j in range(total):
	j = j +1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:33:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)
r = 0
for j in range(y):
	r = r + n[:,j]
	
for j in range(r):
	j = j + 1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:34:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)
r = 0
for j in range(y):
	r = r + n[0,j]
print(r)
	
for j in range(r):
	j = j + 1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:38:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(size(total)):
	if total[j] == max(n):
print(j)

-- ERROR:
File "XXXX", line 9
    print(j)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:38:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[0]
total = zeros(y,dtype=int)

for j in range(size(total)):
	if total[j] == max(n):
		print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:42:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:42:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1
print(y)

-- EXECUTION TIME:
1.05761
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
8
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
8
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:43:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1


-- EXECUTION TIME:
1.15148
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
Digite uma matriz: 3
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:44:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:44:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1


-- EXECUTION TIME:
1.30693
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:34:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:36:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:36:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[0]
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:36:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:38:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
total = zeros(y,dtype=int)
for i in range(y):
	total[i] = total[i]+ sum([n,:])
z = sum([n,:])
print(z)
-- ERROR:
File "XXXX", line 7
    total[i] = total[i]+ sum([n,:])
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:39:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

z = sum([n,:])
print(z)
-- ERROR:
File "XXXX", line 7
    z = sum([n,:])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:39:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

z = sum([n,0])
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:39:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

z = sum([n,1])
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:40:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

z = sum([n,:])
print(z)
-- ERROR:
File "XXXX", line 7
    z = sum([n,:])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:42:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
total = zeros(y,dtype=int)
for i in range(y):
	total[i] = total[i]+ sum([:,i])
y = 1
for j in total:
	if j== max(total):
		print(j)
		y= y +1
	else:
		y = y + 1

-- ERROR:
File "XXXX", line 7
    total[i] = total[i]+ sum([:,i])
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:42:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
total = zeros(y,dtype=int)
for i in range(y):
	total[i] =  sum([:,i])
y = 1
for j in total:
	if j== max(total):
		print(j)
		y= y +1
	else:
		y = y + 1

-- ERROR:
File "XXXX", line 7
    total[i] =  sum([:,i])
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:43:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input(" ")))
y = shape(n)[1]
total = zeros(y,dtype=int)
for i in range(y):
	total[i] =  sum([:,i])
y = 1
for j in total:
	if j== max(total):
		print(j)
		y= y +1
	else:
		y = y + 1

-- ERROR:
File "XXXX", line 7
    total[i] =  sum([:,i])
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:43:17) 
-- CODE:
from numpy import*                              #REFAZER - IMPORTANTE
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1
for i in range(y):
	total[i] = total[i]+ sum([n,:])

-- ERROR:
File "XXXX", line 17
    total[i] = total[i]+ sum([n,:])
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:43:19) 
-- CODE:
from numpy import*                              #REFAZER - IMPORTANTE
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1
for i in range(y):
	total[i] = total[i]+ sum([n,:])

-- EXECUTION TIME:
0.566778
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 17
    total[i] = total[i]+ sum([n,:])
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:43:27) 
-- CODE:
from numpy import*                              #REFAZER - IMPORTANTE
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*                              #REFAZER - IMPORTANTE
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:43:32) 
-- CODE:
from numpy import*                              #REFAZER - IMPORTANTE
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
y = shape(n)[1]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[:,i])
y=1
for j in total:
	if j==max(total):
		print(y)
		y = y + 1
	else:
		y = y + 1

-- EXECUTION TIME:
0.905025
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
